happy new year :)

--- a/index.html
+++ b/index.html
@@ -22,8 +22,7 @@
                 <fieldset class="profile-form__fieldset">
                     <input type="text" class="profile-form__input" id="name" name="name">
                     <input type="text" class="profile-form__input" id="description" name="descriprion">
-                    <button type="button" class="profile-form__submit-button">Сохранить</button>
-
+                    <button type="submit" class="profile-form__submit-button" formaction="#">Сохранить</button>
 
                 </fieldset>
 
