--- a/index.html
+++ b/index.html
@@ -5,14 +5,14 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-   
+    <link rel="stylesheet" href="pages/index.css">
     <title>Mesto</title>
 </head>
 
 <body class="page">
 
     <header class="header">
-        <img src="<%=require('../images/logo.svg')%>" alt="Место" class="logo">
+        <img src="./images/logo.svg" alt="Место" class="logo">
     </header>
 
     <section class="popup profile-popup" tabindex="-1">
@@ -85,7 +85,8 @@
 
         <section class="profile">
             <div class="profile__container">
-                <img src="<%=require('../images/avatar.jpg')%>" alt="аватар" class="avatar">
+                <img src="./images/avatar.jpg" alt="аватар" class="avatar">
+
 
                 <div class="profile__info">
 
@@ -138,7 +139,7 @@
     </template>
    
 
-  
+    <script type="module" src="scripts/index.js"></script>
 
 
 </body>
