--- a/src/index.html
+++ b/src/index.html
@@ -29,7 +29,7 @@
                             <input type="url" class="popup-form__input" id="avatar-link-input" name="avatar-link"  placeholder="Ссылка на аватар" required>
                             <span class="popup-form__input-error avatar-link-input-error"></span>
                         </div>
-                        <button type="submit" class="popup-form__submit-button" formaction="#">Сохранить</button>
+                        <button type="submit" class="popup-form__submit-button" name="submit" formaction="#">Сохранить</button>
 
                     </fieldset>
 
@@ -56,7 +56,7 @@
                             <input type="text" class="popup-form__input" id="description-input" name="descriprion" required minlength="5" maxlength="400">
                             <span class="popup-form__input-error description-input-error"></span>
                         </div>
-                        <button type="submit" class="popup-form__submit-button" formaction="#">Сохранить</button>
+                        <button type="submit" class="popup-form__submit-button" name="submit" formaction="#">Сохранить</button>
 
                     </fieldset>
 
@@ -82,7 +82,7 @@
                             <input type="url" class="popup-form__input" id="place-link-input" name="place-link"  placeholder="Ссылка на картинку" required>
                             <span class="popup-form__input-error place-link-input-error"></span>
                         </div>
-                        <button type="submit" class="popup-form__submit-button" formaction="#">Создать</button>
+                        <button type="submit" class="popup-form__submit-button" name="submit" formaction="#">Создать</button>
                         
                     </fieldset>
 
@@ -110,16 +110,16 @@
         <section class="profile">
             <div class="profile__container">
                 <div class="avatar__container">
-                    <img src="<%=require('../images/avatar.jpg')%>" alt="аватар" class="avatar">
+                    <img src="#" alt="аватар" class="avatar">
                     <button class="avatar__edit-button"></button>
                 </div>
                 <div class="profile__info">
 
                     <div class="profile__info-block">
 
-                        <h1 class="profile__name">Жак-Ив Кусто</h1>
+                        <h1 class="profile__name"></h1>
 
-                        <p class="profile__description">Исследователь океана</p>
+                        <p class="profile__description"></p>
 
                     </div>
 
